[package]
name = "bittorrent-starter-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
rayon = "1.8.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] } # http requests
serde = { version = "1.0.136", features = ["derive"] }             # for json mangling
serde_bencode = "0.2.3"                                            # for bencode encoding/decoding
serde_bytes = "0.11.12"                                            # for dealing with bytes
serde_json = "1.0.105"                                             # for json mangling
serde_urlencoded = "0.7.1"                                         # for url encoding
sha1 = "0.10.1"                                                    # hashing
url = "2.5.2"
